
Fixed: Normalized Jacobian dets were just named j_* without leading "w".

------------------------------------------------------------------------
r974 | gaser | 2016-07-27 11:05:07 +0200 (Mi, 27 Jul 2016) | 10 lines

Changed paths:
M       CAT12-Manual.doc
M       CAT12-Manual.pdf
M       CHANGES.txt
M       Contents.m
M       cat_vol_slice_overlay.m
M       html/cat.html

Fixed: Range in cat_vol_slice_overlay.m was not correctly handled.

------------------------------------------------------------------------
r975 | dahnke | 2016-08-01 17:49:47 +0200 (Mo, 01 Aug 2016) | 28 lines

Changed paths:
M       CHANGES.txt
M       cat12.m
M       cat_io_FreeSurfer.m
M       cat_io_report.m
M       cat_main.m
M       cat_run_job.m
M       cat_run_job_APP_final.m
M       cat_surf_display.m
M       cat_surf_render.m
A  +    cat_surf_render2.m
M       cat_vol_div.m
M       internal/cat_tst_prepareManualSegmentation.m
M       spm_cat12.m

(1) Changed:    Due to further problems with surface rendering the improved
                cat_surf_render function cat_surf_render2 is only called in 
                developer mode. 
(2) Fixed:      Corrected errors in cat_surf_render.             
(3) Changed:    Updated help entry in cat12 and spm_cat12.
(4) Fixed:      Corrected error in error report. The histogram colors are not 
                correct in some images (more test required).
(5) Fixed:      Corrected error in cat_run_job_APP_final with incorrect mask 
                for threshold estimation.
(6) Changed:    Improved volume render function in cat_surf_render.                
(7) Added:      Added FreeSurfer annot-export function.


------------------------------------------------------------------------

Changed paths:
M       CHANGES.txt
M       cat_surf_render.m
M       cat_surf_render2.m

(1) Changed:    Corrected error in old cat_surf_render function.
------------------------------------------------------------------------
r976 | dahnke | 2016-08-01 18:14:54